--- a/index.html
+++ b/index.html
@@ -1,10 +1,76 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Foundations Landing Page</title>
-    </head>
-    <body>
-        
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Foundations Landing Page</title>
+    <link rel="stylesheet" href="./Styles/styles.css" />
+  </head>
+  <body>
+    <nav>
+      <div class="logo">Header Logo</div>
+      <ol class="links">
+        <li>Link 1</li>
+        <li>Link 2</li>
+        <li>Link 3</li>
+      </ol>
+    </nav>
+    <div class="hero">
+      <div class="hero-left"></div>
+      <div class="hero-right"></div>
+    </div>
+    <div class="info">
+      <h2>Some Random Information</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="" alt="" srcset="" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
+          </p>
+        </div>
+        <div class="card">
+          <img src="" alt="" srcset="" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
+          </p>
+        </div>
+        <div class="card">
+          <img src="" alt="" srcset="" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
+          </p>
+        </div>
+        <div class="card">
+          <img src="" alt="" srcset="" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="quote">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
+        quod minima, est tempore cupiditate, placeat temporibus soluta expedita
+        atque excepturi architecto porro. Mollitia dolorem illo quis minus
+        pariatur perspiciatis eius sequi ipsa. Temporibus, vero neque.
+      </p>
+      <p>- Thor, God of Thunder</p>
+    </div>
+    <div class="cta">
+      <div class="cta-card">
+        <div class="card-left">
+          <h3>Call to action! It's time!</h3>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <div class="card-right">
+          <button>Sign Up</button>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+        <p>Copyright Mozes Walker</p>
+    </div>
+  </body>
 </html>
