--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <div class="container">
       <nav>
         <div class="logo">Header Logo</div>
-        <ol class="links">
+        <ul class="links">
           <li>Link 1</li>
           <li>Link 2</li>
           <li>Link 3</li>
-        </ol>
+        </ul>
       </nav>
       <div class="hero">
         <div class="hero-left">
