more section structure

--- a/index.html
+++ b/index.html
@@ -6,85 +6,80 @@
     <link rel="stylesheet" href="./Styles/styles.css" />
   </head>
   <body>
-    <div class="container">
-      <nav>
-        <div class="logo">Header Logo</div>
-        <ul class="links">
-          <li>Link 1</li>
-          <li>Link 2</li>
-          <li>Link 3</li>
-        </ul>
-      </nav>
-      <div class="hero">
-        <div class="hero-left">
-          <h1>This website is awesome</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto!
-          </p>
-          <button>Sign up</button>
-        </div>
-        <div class="hero-right">
-            <div class="image"></div>
-        </div>
-      </div>
-      <div class="info">
-        <h2>Some Random Information</h2>
-        <div class="cards">
-          <div class="card">
-            <img src="" alt="" srcset="" />
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Explicabo.
-            </p>
-          </div>
-          <div class="card">
-            <img src="" alt="" srcset="" />
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Explicabo.
-            </p>
-          </div>
-          <div class="card">
-            <img src="" alt="" srcset="" />
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Explicabo.
-            </p>
-          </div>
-          <div class="card">
-            <img src="" alt="" srcset="" />
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Explicabo.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="quote">
+    <nav>
+      <div class="logo">Header Logo</div>
+      <ul class="links">
+        <li>Link 1</li>
+        <li>Link 2</li>
+        <li>Link 3</li>
+      </ul>
+    </nav>
+
+    <div class="hero">
+      <div class="hero-left">
+        <h1>This website is awesome</h1>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
-          quod minima, est tempore cupiditate, placeat temporibus soluta
-          expedita atque excepturi architecto porro. Mollitia dolorem illo quis
-          minus pariatur perspiciatis eius sequi ipsa. Temporibus, vero neque.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto!
         </p>
-        <p>- Thor, God of Thunder</p>
+        <button>Sign up</button>
       </div>
-      <div class="cta">
-        <div class="cta-card">
-          <div class="card-left">
-            <h3>Call to action! It's time!</h3>
-            <p>
-              Sign up for our product by clicking that button right over there!
-            </p>
-          </div>
-          <div class="card-right">
-            <button>Sign Up</button>
-          </div>
+      <div class="hero-right">
+        <div class="image"></div>
+      </div>
+    </div>
+    <div class="info">
+      <h2>Some Random Information</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="" alt="" srcset="" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
+          </p>
+        </div>
+        <div class="card">
+          <img src="" alt="" srcset="" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
+          </p>
+        </div>
+        <div class="card">
+          <img src="" alt="" srcset="" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
+          </p>
+        </div>
+        <div class="card">
+          <img src="" alt="" srcset="" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
+          </p>
         </div>
       </div>
-      <div class="footer">
-        <p>Copyright Mozes Walker</p>
+    </div>
+    <div class="quote">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
+        quod minima, est tempore cupiditate, placeat temporibus soluta expedita
+        atque excepturi architecto porro. Mollitia dolorem illo quis minus
+        pariatur perspiciatis eius sequi ipsa. Temporibus, vero neque.
+      </p>
+      <p>- Thor, God of Thunder</p>
+    </div>
+    <div class="cta">
+      <div class="cta-card">
+        <div class="card-left">
+          <h3>Call to action! It's time!</h3>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <div class="card-right">
+          <button>Sign Up</button>
+        </div>
       </div>
+    </div>
+    <div class="footer">
+      <p>Copyright Mozes Walker</p>
     </div>
   </body>
 </html>
