text align quote section

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
       </div>
     </div>
     <div class="quote">
-      <p>
+      <p class="para-quote">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
         quod minima, est tempore cupiditate, placeat temporibus soluta expedita
         atque excepturi architecto porro. Mollitia dolorem illo quis minus
         pariatur perspiciatis eius sequi ipsa. Temporibus, vero neque.
       </p>
-      <p>- Thor, God of Thunder</p>
+      <div class="para-author">- Thor, God of Thunder</div>
     </div>
     <div class="cta">
       <div class="cta-card">
