--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   </head>
   <body>
     <nav>
-      <div class="logo">Header Logo</div>
-      <ul class="links">
-        <li>Link 1</li>
-        <li>Link 2</li>
-        <li>Link 3</li>
-      </ul>
+      <div class="container">
+        <div class="logo">Header Logo</div>
+        <ul class="links">
+          <li><a href="/">header link 1</a></li>
+          <li><a href="/">header link 2</a></li>
+          <li><a href="/">header link 3</a></li>
+        </ul>
+      </div>
     </nav>
 
     <div class="hero">
@@ -31,25 +33,25 @@
       <h2>Some Random Information</h2>
       <div class="cards">
         <div class="card">
-          <img src="" alt="" srcset="" />
+          <div class="blue-box"></div>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
           </p>
         </div>
         <div class="card">
-          <img src="" alt="" srcset="" />
+          <div class="blue-box"></div>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
           </p>
         </div>
         <div class="card">
-          <img src="" alt="" srcset="" />
+          <div class="blue-box"></div>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
           </p>
         </div>
         <div class="card">
-          <img src="" alt="" srcset="" />
+          <div class="blue-box"></div>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
           </p>
